--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,11 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
+</div>
+<div>
+    <a asp-controller="Home" asp-action="">Fill out </a>
+</div>
+<div>
+    <a asp-controller="Home" asp-action="">View </a>
 </div>
