add asp-controller and action to pages

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,18 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Steven Covey's Time Management Matrix";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    
+    <h1 class="display-4">Welcome Time Management Website</h1>
+    <img src="~/img/time-management-7-habits-scaled.jpg" alt="A clock image" />
+    <br />
+    <p>What is </p><a asp-controller="Home" asp-action="Summary">Steven Covey's Time Management Matrix</a><p>?</p><br />
 </div>
 <div>
-    <a asp-controller="Home" asp-action="">Fill out </a>
+    <a asp-controller="Home" asp-action="Quadrant">Fill out your task</a>
 </div>
 <div>
-    <a asp-controller="Home" asp-action="">View </a>
-    <p>jialing</p>
+    <a asp-controller="Home" asp-action="TaskList">View the task list</a>
 </div>
 
-<p>Donny Test Push2</p>
-Euigun JUng \
