--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
     <p>What is </p><a asp-controller="Home" asp-action="Summary">Steven Covey's Time Management Matrix</a><p>?</p><br />
 </div>
 <div>
-    <a asp-controller="Home" asp-action="Quadrant">Fill out your task</a>
+    <a asp-controller="Home" asp-action="Task">Fill out your task</a>
 </div>
 <div>
-    <a asp-controller="Home" asp-action="TaskList">View the task list</a>
+    <a asp-controller="Home" asp-action="Quadrant">View the task list</a>
 </div>
 
