--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,10 +25,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Summary">Matrix Explanation</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quadrant">Your Task</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Task">Your Task</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TaskList">Task List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quadrant">Task List</a>
                         </li>
                     </ul>
                 </div>
