--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,21 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Time Management Matrix";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     
 </div>
-<div>
-    <a asp-controller="Home" asp-action="">Fill out </a>
-</div>
+
 <div>
     <a asp-controller="Home" asp-action="">View </a>
 </div>
+
+<div>
+    <p>"Putting First Things First"</p>
+</div>
+
+<div>
+    <a href="/Home/TaskList">Fill out </a>
+</div>
+
