--- a/Views/Home/Task.cshtml
+++ b/Views/Home/Task.cshtml
@@ -5,3 +5,31 @@
 
 <h1>@ViewData["Title"]</h1>
 <p>Fill out your tasks!</p>
+<div>
+    <form>
+        <label asp-for="Task">Task:</label>
+        <input asp-for="Task" />
+        <br />
+        <label asp-for="DueDate">Due Date:</label>
+        <input asp-for="DueDate" />
+        <br />
+        <label asp-for="Quadrant">Quadrant:</label>
+        <input asp-for="Quadrant" />
+        <br />
+        <label asp-for="Category">Category:</label>
+        <select asp-for="Category">
+            <option value="Home">Home</option>
+            <option value="School">School</option>
+            <option value="Work">Work</option>
+            <option value="Church">Church</option>
+        </select>
+        <br />
+        <label asp-for="Completed"></label>
+        <select asp-for="Completed">
+            <option value="True">Yes</option>
+            <option value="False">No</option>
+        </select>
+        <br />
+        <button type="submit">Submit Application</button>
+    </form>
+</div>
