--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "Time Mamangement Matrix";
 }
 @* Euigun Jung: #3 *@
+
+@model Project1.Models.ApplicationResponse
+
 <div class="container">
 
     <div class="row"> Stephen Covey's Time Management Matrix </div>
