--- a/Views/Home/Task.cshtml
+++ b/Views/Home/Task.cshtml
@@ -16,12 +16,13 @@
         <label asp-for="Quadrant">Quadrant:</label>
         <input asp-for="Quadrant" />
         <br />
-        <label asp-for="Category">Category:</label>
-        <select asp-for="Category">
-            <option value="Home">Home</option>
-            <option value="School">School</option>
-            <option value="Work">Work</option>
-            <option value="Church">Church</option>
+        <label asp-for="CategoryId">Category:</label>
+        <select asp-for="CategoryId">
+            <option value="">Select a Category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+            <option value="@CategoryId">@c.CategoryName</option>
+            }
         </select>
         <br />
         <label asp-for="Completed"></label>
