--- a/Views/Home/Task.cshtml
+++ b/Views/Home/Task.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "My Tasks";
 }
-@model MovieCollection.Models.ApplicationResponse;
+@model Project1.Models.ApplicationResponse;
 
 <h1>@ViewData["Title"]</h1>
 <p>Fill out your tasks!</p>
