--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -3,7 +3,7 @@
 }
 @* Euigun Jung: #3 *@
 
-@model Project1.Models.ApplicationResponse
+@model List<ApplicationResponse>
 
 <div class="container">
 
