--- a/Views/Home/Delete.cshtml
+++ b/Views/Home/Delete.cshtml
@@ -4,10 +4,10 @@
 @model ApplicationResponse
 
 <h2>Confirm Deletion</h2>
-<h3>Are you sure that you want to delete this record for @Model.Title?</h3>
+<h3>Are you sure that you want to delete this record for @Model.Task?</h3>
 <form method="post" asp-controller="Home" asp-action="Delete">
     <button type="submit">Delete</button>
     <a asp-controller="Home" asp-action="TaskList" class="btn btn-outline-primary">Cancel</a>
 
-    <input type="hidden" asp-for="ApplicationId" />
+    <input type="hidden" asp-for="TaskId" />
 </form>
