Changing the model

--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Time Mamangement Matrix";
 }
-@* Euigun Jung: #3 *@
+@* Euigun Jung: Creating Quadrants and letting users Update and Delete the tasks. *@
 
-@model Project1.Models.ApplicationResponse
+@model List<ApplicationResponse>
 
 <div class="container">
 
