--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Time Management Website</h1>
-    <img src="~/img/time-management-7-habits-scaled.jpg" alt="A clock image" />
+    <img src="~/img/time-management-7-habits-scaled.jpg" alt="A clock image" style="width:500px;height:600px;" />
     <br />
-    <p>What is </p><a asp-controller="Home" asp-action="Summary">Steven Covey's Time Management Matrix</a><p>?</p><br />
+    <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a>
 </div>
 <div>
     <a asp-controller="Home" asp-action="Task">Fill out your task</a>
