--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Time Management Website</h1>
-    <img src="~/img/time-management-7-habits-scaled.jpg" alt="A clock image" style="width:500px;height:600px;" />
+    <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a>
+    <img src="~/img/time-management-7-habits-scaled.jpg" alt="A clock image" style="width:500px;height:400px;" />
     <br />
     <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a>
 </div>
