--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Time Management Website</h1>
-    <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a>
+    <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a><br />
     <img src="~/img/time-management-7-habits-scaled.jpg" alt="A clock image" style="width:500px;height:400px;" />
     <br />
-    <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a>
+
 </div>
 <div>
     <a asp-controller="Home" asp-action="Task">Fill out your task</a>
