--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -31,7 +31,7 @@
                                 <a asp-controller="Home" asp-action="Delete" asp-route-applicationId="@i.TaskId"> Delete Task </a>
                             </div>
                             <div>
-                                <a class="btn btn-outline-primary" asp-controller="Home" asp-action="Complete" asp-route-applicationId="@i.TaskId"> Task Completed! </a>
+                                <a class="btn btn-outline-primary" asp-controller="Home" asp-action="MarkComplete" asp-route-applicationId="@i.TaskId"> Task Completed! </a>
                             </div>
                         </div>
                     }
