--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+.row{
+    border: solid 3px brown !important;
+}
+.container {
+    border: solid 3px brown !important;
+}
+.col-5 {
+    border-left solid 3px black !important;
+}
+
