--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -78,6 +78,6 @@ body {
     border: solid 3px brown !important;
 }
 .col-5 {
-    border-left solid 3px black !important;
+    border-left: solid 3px black !important;
 }
 
