--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -5,19 +5,20 @@
 
 @model List<ApplicationResponse>
 
+
 <div class="container">
 
-    <div class="row"> Stephen Covey's Time Management Matrix </div>
+    <div class="row" > Stephen Covey's Time Management Matrix </div>
 
-    <div class="row">
+    <div class="row" style="border: solid 3px black !important">
         <div class="col-2"></div>
-        <div class="col-5">Urgent</div>
-        <div class="col-5">Not Urgent</div>
+        <div class="col-5" style="border-left: solid 3px black !important">Urgent</div>
+        <div class="col-5" style="border-left: solid 3px black !important">Not Urgent</div>
     </div>
 
-    <div class="row">
+    <div class="row" style="border: solid 3px black !important">
         <div class="col-2">Important</div>
-        <div class="col-5">
+        <div class="col-5" style="border-left: solid 3px black !important">
             <p style="color:brown">Quadrant 1</p>
             <div>
                 @foreach (var i in Model)
@@ -38,7 +39,7 @@
                 }
             </div>
         </div>
-        <div class="col-5">
+        <div class="col-5" style="border-left: solid 3px black !important">
             <p style="color:brown">Quadrant 2</p>
                 <div>
                     @foreach (var i in Model)
@@ -61,9 +62,9 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="border: solid 3px black !important">
         <div class="col-2">Not Important</div>
-        <div class="col-5">
+        <div class="col-5" style="border-left: solid 3px black !important">
             <p style="color:brown">Quadrant 3</p>
                 <div>
                     @foreach (var i in Model)
@@ -83,7 +84,7 @@
                         }
                 </div>
         </div>
-        <div class="col-5">
+        <div class="col-5" style="border-left: solid 3px black !important">
             <p style="color:brown">Quadrant 4</p>
             <div>
                 @foreach (var i in Model)
