--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -1,4 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Confirmation";
 }
+
+@*Confirm the submission of the task*@
+
 <h2>Submitted! We received your task.</h2>
