--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "Steven Covey's Time Management Matrix";
 }
 
+@*Group2-7 YunChen Lee, Euigun Jung, Donovan Chin, Jialing Lu
+  This is the updated website*@
+
 <div class="text-center">
     <h1 class="display-4">Welcome Time Management Website</h1>
     <a asp-controller="Home" asp-action="Summary">Go check Steven Covey's Time Management Matrix</a><br />
