--- a/Views/Home/Quadrant.cshtml
+++ b/Views/Home/Quadrant.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Time Mamangement Matrix";
 }
-@* Euigun Jung: Creating Quadrants and letting users Update and Delete the tasks. *@
+@* Creating Quadrants and letting users Update and Delete the tasks. *@
 
 @model List<ApplicationResponse>
 
