--- a/Views/Home/Summary.cshtml
+++ b/Views/Home/Summary.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Steven Covey's Time Management Matrix";
 }
+@*This is additional info about the matrix*@
+
 <h1>@ViewData["Title"]</h1>
 <a href="https://www.indeed.com/career-advice/career-development/covey-time-management-matrix" alt="the explanation site link">Go check the explanation site!</a>
